--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <ul class="links-container">
           
 
-          <li class="link-item"><a href="home.html" class="link">home</a></li>
+          <li class="link-item"><a href="index.html" class="link">home</a></li>
           <li class="link-item"><a href="404.html" class="link">woman</a></li>
           <li class="link-item"><a href="404.html" class="link">man</a></li>
           <li class="link-item"><a href="404.html" class="link">kids</a></li>
